--- a/src/app/calendar/day/day.component.css
+++ b/src/app/calendar/day/day.component.css
@@ -2,9 +2,11 @@
     display: grid;
     grid-template-rows: repeat(56, 1fr);
     grid-row-gap: 2px;
+    max-height: 1230px;
 }
 
 .not-task{
     background-color: #c5bae8;
     font-size: xx-small;
+    max-height: 20px;
 }
